@@ -23,7 +23,8 @@ local macro = require "macro"
 local yaml  = require "yaml"
 
 from "specl.compat" import loadstring
-from "specl.std"    import io.catfile, package.path_mark
+from "specl.std"    import io.catfile, package.dirsep, package.pathsep,
+                      package.path_mark, string.escape_pattern, string.slurp
 from "specl.util"   import nop
 
 
@@ -41,6 +42,49 @@ macro.define ("expect", function (get)
   end
   return out, true -- pass through 'expect' token
 end)
+
+
+-- A list of directories we've loaded yaml spec-files from.  Any other
+-- files required from these directories are macro-expanded during
+-- loading.
+local spec_path = ""
+
+
+--- Search spec_path for module name.
+-- @string name module name to load
+-- @return compiled module as a function, or error message if not found
+local function expandmacros (name)
+  local errbuf = {}
+  for m in spec_path:gmatch ("([^" .. escape_pattern (pathsep) .. "]+)") do
+    local path = m:gsub (escape_pattern (path_mark), (name:gsub ("%.", dirsep)))
+    local fh, err = io.open (path, "r")
+    if fh == nil then
+      errbuf[#errbuf + 1] = "\topen file '" .. path .. "' failed: " .. err
+    else
+
+      -- Found and opened...
+      local source = slurp (fh)
+      local content, err = macro.substitute_tostring (source)
+      if content == nil and err ~= nil then
+        errbuf[#errbuf + 1] = "\tmacro expansion failed in '" .. path.. "': " .. err
+      else
+
+	-- ...and macro substituted...
+        local loadfn, err = loadstring (content, name)
+        if type (loadfn) ~= "function" then
+         errbuf[#errbuf + 1] = "\tloadstring '" .. path .. "' failed: " .. err
+        else
+
+          -- ...and successfully loaded! Return it!
+          return loadfn
+        end
+      end
+    end
+  end
+
+  -- Paths exhausted, return the list of failed attempts.
+  return table.concat (errbuf, "\n")
+end
 
 
 -- Metatable for Parser objects.
@@ -251,7 +295,9 @@ local parser_mt = {
 -- Parser object constructor.
 local function Parser (filename, s, unicode)
   local dir  = std.io.dirname (filename)
-  local path = std.package.normalize (catfile (dir, path_mark .. ".lua"))
+
+  -- Add this spec-file directory to the macro-expanded spec_path list.
+  spec_path = std.package.normalize (catfile (dir, path_mark .. ".lua"), spec_path)
 
   local object = {
     unicode  = unicode,
@@ -265,11 +311,16 @@ local function Parser (filename, s, unicode)
 
     -- Used to simplify requiring from the spec file directory.
     preamble = string.format ([[
-      package.path = require "specl.std".package.normalize ("%s", package.path)
+      package.path = "%s"
+
+      -- Expand macros in spec_helper.
+      local loader    = require "specl.loader"
+      local spec_path = "%s"
 
       -- Autoload spec_helper from spec-file directory, if any.
+      table.insert (package.loaders, 1, loader.expandmacros)
       pcall (require, "spec_helper")
-    ]], path)
+    ]], package.path, spec_path)
   }
   return setmetatable (object, parser_mt)
 end
@@ -315,8 +366,9 @@ end
 --[[ ----------------- ]]--
 
 local M = {
-  load = load,
-  null = null,
+  expandmacros = expandmacros,
+  load         = load,
+  null         = null,
 }
 
 return M
