@@ -1,6 +1,8 @@
 local hell = require "specl.shell"
 local std  = require "specl.std"
 
+math.randomseed (os.time ())
+
 package.path = std.package.normalize ("lib/?.lua", package.path)
 
 local Object = std.Object
@@ -71,15 +73,37 @@ end
 --[[ ================ ]]--
 
 
+TMPDIR = os.getenv "TMPDIR" or os.getenv "TMP" or "/tmp"
+
+
+local function append (path, ...)
+  local n = select ("#", ...)
+  if n > 0 then
+    local fh = io.open (path, "a")
+    std.io.writelines (fh, ...)
+    fh:close ()
+  end
+  return n
+end
+
+
+-- Create a temporary file.
+-- @usage
+--   h = Tmpfile ()        -- empty generated filename
+--   h = Tmpfile (content) -- save *content* to generated filename
+--   h = Tmpfile (name, line, line, line) -- write *line*s to *name*
 Tmpfile = Object {
   _type = "Tmpfile",
 
-  _init = function (self, content)
-    self.path = os.tmpname ()
-    if type (content) == "string" then
-      local fh = io.open (self.path, "w")
-      fh:write (content)
-      fh:close ()
+  path = nil,
+
+  _init = function (self, path, ...)
+    if select ("#", ...) == 0 then
+      self.path = os.tmpname ()
+      append (self.path, path, ...)
+    else
+      self.path = path
+      append (path, ...)
     end
     return self
   end,
@@ -92,14 +116,39 @@ Tmpfile = Object {
     return self.path:gsub (".*/", "")
   end,
 
-  append = function (self, s)
-    local fh = io.open (self.path, "a")
-    fh:write (s)
-    fh:close ()
+  append = function (self, ...)
+    return append (self.path, ...)
   end,
 
   remove = function (self)
-    os.remove (self.path)
+    return os.remove (self.path)
+  end,
+}
+
+
+Tmpdir = Object {
+  _type = "Tmpdir",
+
+  tmpdir = std.io.catfile (TMPDIR, "specl_" .. math.random (65536)),
+
+  path = nil,
+
+  _init = function (self, dirname)
+    self.path = dirname or self.tmpdir
+    os.execute ("mkdir " .. self.path)
+    return self
+  end,
+
+  file = function (self, name, ...)
+    return Tmpfile (std.io.catfile (self.path, name), ...)
+  end,
+
+  subdir = function (self, name)
+    return Tmpdir (std.io.catfile (self.path, name))
+  end,
+
+  remove = function (self)
+    return os.remove (self.path)
   end,
 }
 
