@@ -30,6 +30,7 @@ specl_SPECS =						\
 	$(srcdir)/specs/formatter/progress_spec.yaml	\
 	$(srcdir)/specs/formatter/report_spec.yaml	\
 	$(srcdir)/specs/inprocess_spec.yaml		\
+	$(srcdir)/specs/loader_spec.yaml		\
 	$(srcdir)/specs/matchers_spec.yaml		\
 	$(srcdir)/specs/shell_spec.yaml			\
 	$(srcdir)/specs/should_spec.yaml		\
